[gd_scene load_steps=3 format=3 uid="uid://cle6b4qe3nss5"]

[ext_resource type="Script" uid="uid://b77wg6swtf8j5" path="res://root/scenes/scene/game_scene/game_content/coins_counter/coins_counter.gd" id="1_h5fpb"]
[ext_resource type="PackedScene" uid="uid://bif8wd4q6rxty" path="res://root/scenes/component/motion/scale_motion/scale_motion.tscn" id="2_7ys71"]

[node name="CoinsCounterVBoxContainer" type="VBoxContainer"]
theme_override_constants/separation = -16
script = ExtResource("1_h5fpb")

[node name="CoinsCounterTitleLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Love"
horizontal_alignment = 1

[node name="CoinsCounterValueLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "0"
horizontal_alignment = 1

[node name="ScaleMotion" parent="." instance=ExtResource("2_7ys71")]
unique_name_in_owner = true
